added tests for OrderService;